--- a/Hola mundo/src/App.css
+++ b/Hola mundo/src/App.css
@@ -28,10 +28,49 @@
 }
 
 .tw-followCard-button {
-    margin-left: 16px;
+    cursor: pointer;
+    margin-left: 60px;
     border: 0;
     border-radius: 999px;
     padding: 6px 16px;
     font-weight: bold;
+    border: 1px solid #000 ;
+    transition: .3s ease background-color;
 
+}
+
+.tw-followCard-text {
+    display: block;
+}
+
+.tw-followCard-button:hover {
+    opacity: .8;
+}
+
+.tw-followCard-button.is-following {
+    border: 1px solid white;
+    background: transparent;
+    color: #fff;
+    width: 140px;
+}
+
+.tw-followCard-button.is-following:hover {
+    background-color: rgba(255, 102, 102, 0.299);
+    color: red;
+    border: 1px solid red;
+    transition: .3s ease all;
+
+}
+
+.tw-followCard-button.is-following:hover .tw-followCard-text {
+    display: none;
+}
+
+
+.tw-followCard-button.is-following:hover .tw-followCard-stopFollow {
+    display: block;
+}
+
+.tw-followCard-stopFollow {
+    display: none;
 }
